port(1.20.4): adapt legacy fabric apis